--- a/CalculatorApp/app/src/main/res/layout/layout_calculator_widget.xml
+++ b/CalculatorApp/app/src/main/res/layout/layout_calculator_widget.xml
@@ -68,7 +68,8 @@
                 android:layout_marginEnd="3dp"
                 android:background="@drawable/pinned_widget_background"
                 android:gravity="center"
-                android:visibility="visible">
+                tools:visibility="visible"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/first_rate"
